@@ -1,3 +1,8 @@
+2000-11-25  Benjamin Chelf  <chelf@codesourcery.com>
+
+	* doc/design/qmtrack/user-api.xml: Make style changes. Update
+	based on conversations with Alex.
+
 2000-11-20  Alex Samuel  <samuel@codesourcery.com>
 
 	* doc/design/qmtest/req.xml: New file.
